vehicle wrapper removing wheels crash #37040

Closed
opened 2013-10-11 09:13:59 +02:00 by Raf Colson · 7 comments

Category: Physics

%%%--- Operating System, Graphics card ---

WINDOWS 7, NVIDIA GEFORCE GT 540M

- Blender version with error, and version that worked ---

BLENDER 2.5 - 2.68

- Short description of error ---

After wheels are added to KX_VehicleWrapper with bge.types.KX_VehicleWrapper.addWheel(KX_GameObject, ...), removing KX_GameObject will cause Blender to crash, even when the KX_VehicleWrapper is removed with bge.constraints.removeConstraint(KX_VehicleWrapper.getConstraintId()).

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

PRESS SPACE TO REMOVE THE VEHICLE

NOW TRY THIS AGAIN WITH THE HASH REMOVED ON LINE 57 TO REMOVE THE TIRES TOO
%%%

**Category**: Physics %%%--- Operating System, Graphics card --- WINDOWS 7, NVIDIA GEFORCE GT 540M - Blender version with error, and version that worked --- BLENDER 2.5 - 2.68 - Short description of error --- After wheels are added to KX_VehicleWrapper with bge.types.KX_VehicleWrapper.addWheel(KX_GameObject, ...), removing KX_GameObject will cause Blender to crash, even when the KX_VehicleWrapper is removed with bge.constraints.removeConstraint(KX_VehicleWrapper.getConstraintId()). - Steps for others to reproduce the error (preferably based on attached .blend file) --- PRESS SPACE TO REMOVE THE VEHICLE NOW TRY THIS AGAIN WITH THE HASH REMOVED ON LINE 57 TO REMOVE THE TIRES TOO %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%I just noticed when I opened my default blend file (to start Blender) and then open Vehicle_wrapper_bug_on_wheels.blend, the tires will be removed too when pressing space. This is very strange but if necessary I'll attach my default blend file too. So let me know if this would help finding the problem.%%%

%%%I just noticed when I opened my default blend file (to start Blender) and then open Vehicle_wrapper_bug_on_wheels.blend, the tires will be removed too when pressing space. This is very strange but if necessary I'll attach my default blend file too. So let me know if this would help finding the problem.%%%

%%%Moved from Blender 2.6 Bug Tracker to Game Engine%%%

%%%Moved from Blender 2.6 Bug Tracker to Game Engine%%%

This issue was referenced by blender/blender-addons-contrib@c73f82b6f0

This issue was referenced by blender/blender-addons-contrib@c73f82b6f07c76705be52d7bb40ee866aea98b9c

This issue was referenced by c73f82b6f0

This issue was referenced by c73f82b6f07c76705be52d7bb40ee866aea98b9c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c73f82b6f0.

Closed by commit c73f82b6f0.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37040
No description provided.